--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <script src="js/jquery-3.1.0.min.js"></script>
-  <script src="js/script.js"></script>
-  <link rel="stylesheet" href="css/style.css">
-  <title>The Complete jQuery Course - Project Structure</title>
+	<meta charset="UTF-8">
+	<script src="js/jquery-3.1.0.min.js"></script>
+	<script src="js/script.js"></script>
+	<link rel="stylesheet" href="css/style.css">
+	<title>The Complete jQuery Course - Project Structure</title>
 </head>
+
 <body>
-  <div id="content">
-    <h1>The Complete jQuery Course - Project Structure</h1>
+	<div id="content">
+		<h1>The Complete jQuery Course - Project Structure</h1>
 
-    <div class="red-box">Red</div>
-    <div class="green-box">Green</div>
-    <div class="blue-box">Blue</div>
-    <div class="clear"></div>
+		<div class="red-box">Red</div>
+		<div class="green-box">Green</div>
+		<div class="blue-box">Blue</div>
+		<div class="blue-box" style="display: none">Blue 2</div>
+		<div class="clear"></div>
 
-    <h2>Hi, I'm the Base Project!</h2>
-    <p>Add elements here as you like to try out jQuery. This is your playground to test out anything that comes into your mind.</p>
-    <p><strong>OR:</strong> Copy this project structure into a new directory first to create separate playgrounds for animations, manipulations, event handlers etc.</p>
-  </div>
+
+		<h2>Hi, I'm the Base Project!</h2>
+		<p>Add elements here as you like to try out jQuery. This is your playground to test out anything that comes into your mind.</p>
+		<p><strong>OR:</strong> Copy this project structure into a new directory first to create separate playgrounds for animations, manipulations, event handlers etc.</p>
+
+		<div class="lightbox">
+			<h2>Lightbox</h2>
+			<p>
+				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+			</p>
+			<form action="">
+				<input type="email" placeholder="Your best email">
+				<input type="submit" value="Sign me up">
+        <input id="closebtn" type="submit" value="No Thanks" onClick="$('.lightbox').trigger('close');">
+			</form>
+		</div>
+
+	</div>
 </body>
+
 </html>
