--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
 			</form>
 		</div>
 
+  <ul id="list">
+      <li>List item one</li>
+      <li>List item two with subitems:
+          <ul>
+              <li>Subitem 1</li>
+              <li>Subitem 2</li>
+          </ul>
+      </li>
+      <li>Final list item</li>
+  </ul>
+
+
 	</div>
 </body>
 
