--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<script src="js/jquery-3.1.0.min.js"></script>
 	<script src="js/script.js"></script>
+  <script src="js/slideshow.js"></script>
 	<link rel="stylesheet" href="css/style.css">
 	<title>The Complete jQuery Course - Project Structure</title>
 </head>
@@ -29,14 +30,15 @@
 			<p>
 				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 			</p>
-			<form action="">
+<!--			<form action="">
 				<input type="email" placeholder="Your best email">
 				<input type="submit" value="Sign me up">
+        <textarea cols="30" rows="10"></textarea>
         <input id="closebtn" type="submit" value="No Thanks" onClick="$('.lightbox').trigger('close');">
-			</form>
+			</form>-->      
 		</div>
 
-  <ul id="list">
+<!--  <ul id="list">
       <li>List item one</li>
       <li>List item two with subitems:
           <ul>
@@ -45,8 +47,36 @@
           </ul>
       </li>
       <li>Final list item</li>
+  </ul>-->
+  
+    <ul id="list">
+      <li>List item one
+          <ul>
+              <li>Subitem 1</li>
+              <li>Subitem 2</li>
+          </ul>
+      <li>List item two
+          <ul>
+              <li>Subitem 1</li>
+              <li>Subitem 2</li>
+          </ul>
+      <li>List item three
+          <ul>
+              <li>Subitem 1</li>
+              <li>Subitem 2</li>
+          </ul>
+      <li>List item four
+          <ul>
+              <li>Subitem 1</li>
+              <li>Subitem 2</li>
+          </ul>          
   </ul>
-
+			<form action="">
+        <input type="text"><br>
+				<input type="email" placeholder="Your best email"><br>
+        <textarea cols="30" rows="10"></textarea>
+        <input type="submit" value="Sign me up">
+			</form>
 
 	</div>
 </body>
