--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="js/jquery-3.1.0.min.js"></script>
-	<script src="js/script.js"></script>
-  <script src="js/slideshow.js"></script>
+	<script src="js/script2.js"></script>
+  <!--<script src="js/slideshow.js"></script>-->
 	<link rel="stylesheet" href="css/style.css">
 	<title>The Complete jQuery Course - Project Structure</title>
 </head>
@@ -22,7 +22,7 @@
 
 
 		<h2>Hi, I'm the Base Project!</h2>
-		<p>Add elements here as you like to try out jQuery. This is your playground to test out anything that comes into your mind.</p>
+		<p>Add elements here as you like to try out <a id="special-link" href="http://www.jquery.com">jQuery</a>. This is your playground to test out anything that comes into your mind.</p>
 		<p><strong>OR:</strong> Copy this project structure into a new directory first to create separate playgrounds for animations, manipulations, event handlers etc.</p>
 
 		<div class="lightbox">
@@ -48,6 +48,12 @@
       </li>
       <li>Final list item</li>
   </ul>-->
+
+<!--<div class="gallery">
+  <img src="images/laptop-mobile_small.jpg" alt="">-->
+<!--  <img src="images/laptop-on-table_small.jpg" alt="">
+  <img src="images/people-office-group-team_small.jpg" alt="">-->
+<!--</div>-->
   
     <ul id="list">
       <li>List item one
@@ -72,8 +78,10 @@
           </ul>          
   </ul>
 			<form action="">
-        <input type="text"><br>
+        <input type="text" placeholder="Written Stuff"><br>
 				<input type="email" placeholder="Your best email"><br>
+        <input type="checkbox" name="cb" checked><br>
+        <input type="range" min="1" max="8" value="3"><br>
         <textarea cols="30" rows="10"></textarea>
         <input type="submit" value="Sign me up">
 			</form>
