--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="js/jquery-3.1.0.min.js"></script>
-	<script src="js/script2.js"></script>
+	<script src="js/script3.js"></script>
   <!--<script src="js/slideshow.js"></script>-->
 	<link rel="stylesheet" href="css/style.css">
 	<title>The Complete jQuery Course - Project Structure</title>
@@ -12,11 +12,16 @@
 
 <body>
 	<div id="content">
+    
+    <button id="btn-click">Click</button>    
+    <button id="btn-hover">Hover</button>
+    
 		<h1>The Complete jQuery Course - Project Structure</h1>
 
 		<div class="red-box">Red</div>
 		<div class="green-box">Green</div>
 		<div class="blue-box">Blue</div>
+ 		<div class="dummy">Dummy</div>   
 		<div class="blue-box" style="display: none">Blue 2</div>
 		<div class="clear"></div>
 
@@ -49,11 +54,11 @@
       <li>Final list item</li>
   </ul>-->
 
-<!--<div class="gallery">
-  <img src="images/laptop-mobile_small.jpg" alt="">-->
+<div class="gallery">
+  <img src="images/laptop-mobile_small.jpg" alt="">
 <!--  <img src="images/laptop-on-table_small.jpg" alt="">
   <img src="images/people-office-group-team_small.jpg" alt="">-->
-<!--</div>-->
+</div>
   
     <ul id="list">
       <li>List item one
