--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="js/jquery-3.1.0.min.js"></script>
-	<script src="js/script4.js"></script>
+	<script src="js/script3.js"></script>
   <!--<script src="js/slideshow.js"></script>-->
+  <!--<script src="js/lightbox.js"></script>-->  
 	<link rel="stylesheet" href="css/style.css">
 	<title>The Complete jQuery Course - Project Structure</title>
 </head>
