--- a/index.html
+++ b/index.html
@@ -86,11 +86,22 @@
 			<form action="">
         <input type="text" placeholder="Written Stuff"><br>
 				<input type="email" placeholder="Your best email"><br>
-        <input type="checkbox" name="cb" checked><br>
+        <input type="checkbox" name="cb" checked><label for="cb">For CB</label><br>
         <input type="range" min="1" max="8" value="3"><br>
         <textarea cols="30" rows="10"></textarea>
+                <br>
+        <select id="selection">
+          <option>Option 1</option>
+          <option>Option 2</option>
+          <option>Option 3</option>
+          <option>Option 4</option>
+          <option>Option 5</option>
+          <option>Option 6</option>
+        </select>
         <input type="submit" value="Sign me up">
 			</form>
+        
+
 
 	</div>
 </body>
