--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="js/jquery-3.1.0.min.js"></script>
-	<script src="js/formValidation.js"></script>
+	<script src="js/formValidationFast.js"></script>
   <!--<script src="js/slideshow.js"></script>-->
   <!--<script src="js/lightbox.js"></script>-->  
 	<link rel="stylesheet" href="css/style.css">
